# VK-INTERN-EXERCISE

./: CMakeLists.txt  README.md  main.cpp  task_scheduler.cpp
